# statusline

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  install.sh  justfile  release-plz.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/statusline/: CHANGELOG.md  Cargo.toml
crates/statusline-configure/: Cargo.toml
crates/statusline-configure/src/: colorpick.rs  draw.rs  lib.rs  lineedit.rs  model.rs  options.rs  picker.rs  theme.rs  view.rs
crates/statusline-core/: Cargo.toml
crates/statusline-core/src/: browser.rs  catalog.rs  constants.rs  context_window.rs  format.rs  input.rs  lib.rs  sample.rs  settings.rs  usage.rs  usage_bridge.rs  util.rs
crates/statusline-core/src/segment/: account.rs  cost.rs  env.rs  git.rs  mod.rs  render.rs
crates/statusline/src/: accounts.rs  browser.rs  install.rs  main.rs  profiles.rs  usage.rs  usage_cache.rs
docs/superpowers/specs/: 2026-04-18-per-account-browser-profile-design.md
scripts/: screenshot.sh
src/: accounts.rs  browser.rs  chrome.rs  constants.rs  context_window.rs  format.rs  input.rs  install.rs  main.rs  profiles.rs  settings.rs  update.rs  usage.rs  util.rs
src/segment/: account.rs  context.rs  cost.rs  credits.rs  env.rs  git.rs  mod.rs  rate_limit.rs  render.rs
tests/fixtures/: input.json
