[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
statusline-core = { path = "crates/statusline-core" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
thiserror = "2"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Canonical lint set shared across these tools (keep in sync with clankerbox).
[workspace.lints.rust]
# Lint groups need a lower priority than individual lints so the latter can
# override the group (clippy::lint_groups_priority).
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unused_must_use = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Correctness & safety
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
float_cmp = "warn"
invalid_upcast_comparisons = "warn"
large_types_passed_by_value = "warn"

# Clarity & readability
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"

# Debugging leftovers & stubs
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Imports
wildcard_imports = "warn"

# Strings & allocations
inefficient_to_string = "warn"
str_to_string = "warn"
string_add_assign = "warn"

# Style
doc_markdown = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
