[package]
name = "statusline-configure"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
description = "Inline live-preview editor for statusline segments"
repository = "https://github.com/ryanclark/statusline"
license = "MIT"
publish = false

[dependencies]
statusline-core.workspace = true
crossterm = "0.29"
serde_json.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true
unicode-width = "0.2"

[lints]
workspace = true
