[package]
name = "statusline-core"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
description = "Shared statusline segment model and renderer"
repository = "https://github.com/ryanclark/statusline"
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
owo-colors.workspace = true
chrono.workspace = true
thiserror.workspace = true
dirs.workspace = true
clap = { workspace = true, optional = true }

[features]
clap = ["dep:clap"]

[dev-dependencies]
strip-ansi-escapes.workspace = true

[lints]
workspace = true
