[package]
name = "statusline"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
description = "Claude Code status line with context window and usage tracking"
repository = "https://github.com/ryanclark/statusline"
license = "MIT"

[dependencies]
clap.workspace = true
eyre = "0.6.12"
owo-colors.workspace = true
security-framework = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
semver = "1"
serde.workspace = true
serde_json.workspace = true
ureq = "3.3.0"
statusline-core = { workspace = true, features = ["clap"] }
statusline-configure = { path = "../statusline-configure", version = "1.0.0" }

[features]
codesigned = []

[lints]
workspace = true
